<resources>
    <string name="app_name">MandatoryCourseRating</string>
    <string name="rate_course">Rating</string>
    <string name="rate_help">Please rate the course:</string>
    <string name="rate_rela">Subject relavans</string>
    <string name="rate_over">Teacher overall performance</string>
    <string name="rate_prep">Teacher preparation</string>
    <string name="rate_feed">Amount of feedback</string>
    <string name="rate_examp">How good their examples are</string>
    <string name="rate_job">Job opportunities</string>
    <string name="submit_rate">Submit</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="menu">Choose a course to rate</string>
    <string name="logout">Logout</string>
    <string name="slash">/</string>
    <string name="rating">Rating: </string>
    <string name="rating_submited">Rating submitted</string>
    <string name="software_construction">Software Construction</string>
    <string name="software_design">Software Design</string>
    <string name="android_app">Android App</string>
    <string name="angular">Angular</string>
    <string name="logout_message">Logging out</string>
    <string name="login_message">Logging in</string>
    <string name="loginWrongUsername">Wrong username credentials</string>
    <string name="loginWrongPassword">Wrong password credentials</string>
    <string name="loginWrongCredentials">Wrong login credentials</string>
    <string name="loginNoInput">Please enter login credentials</string>
    <string name="gradeA">A</string>
    <string name="gradeB">B</string>
    <string name="gradeC">C</string>
    <string name="gradeD">D</string>
    <string name="gradeE">E</string>
    <string name="gradeX">X</string>
    <string name="sendEmail">Email results</string>
    <string name="mailToEmail">mailto:lukasnielsen98@gmail.com</string>
    <string name="mailToSubject">Rating of the course&#160;</string>
    <string name="mailToBody">&#160;got the following rating:&#160;</string>
    <string name="space">&#160;</string>
    <string name="noEmailSetup">No email apps setup</string>
    <string name="overallRating">Overall rating: </string>
    <string name="MENU_ACTIVITY_KEY_COURSE_NAME">MenuActivityCourseName</string>
    <string name="RATE_COURSE_KEY_RATING_VALUE">RateCourseRatingValue</string>
    <string name="RATE_COURSE_COURSE_NAME">RateCourseName</string>
    <string name="MY_PREFS">MY_PREFS</string>
    <string name="USERNAME_KEY">USERNAME_KEY</string>
    <string name="PASSWORD_KEY">PASSWORD_KEY</string>
    <string name="adminUsername">admin</string>
    <string name="adminPassword">1234</string>
</resources>
